Fix contrast issue with post metadata font color

--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -1,11 +1,11 @@
 .light {
   --pri-color: rgb(232, 236, 235);
   --sec-color: rgb(45, 62, 78);
-  --highlight-color: rgba(45, 62, 78, 0.5);
+  --highlight-color: rgba(45, 62, 78, 0.8);
 }
 
 .dark {
   --pri-color: rgb(45, 62, 78);
   --sec-color: rgb(232, 236, 235);
-  --highlight-color: rgba(232, 236, 235, 0.5);
+  --highlight-color: rgba(232, 236, 235, 0.8);
 }
